--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -257,9 +257,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:orientation="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -270,9 +269,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
-                        android:textStyle="bold"
+                        android:text="Why is maintaining eye health important?"
                         android:textSize="20sp"
-                        android:text="Why is maintaining eye health important?"/>
+                        android:textStyle="bold" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
@@ -293,43 +292,58 @@
 
                             <TextView
                                 android:id="@+id/textView5"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginEnd="10dp"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textSize="15sp"
-                                android:justificationMode="inter_word"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginEnd="10dp"
                                 android:fontFamily="@font/poppins"
-                                android:text="Maintaining eye health is crucial because our eyes are essential for most daily activities, allowing us to perceive and interact with the world around us. Good vision supports productivity, learning, and safety, while poor eye health can lead to discomfort, impaired vision, or even permanent blindness if not addressed. Regular eye care helps detect and prevent conditions like myopia, cataracts, or glaucoma early, ensuring long-term quality of life and independence." />
+                                android:justificationMode="inter_word"
+                                android:text="Maintaining eye health is crucial because our eyes are essential for most daily activities, allowing us to perceive and interact with the world around us. Good vision supports productivity, learning, and safety, while poor eye health can lead to discomfort, impaired vision, or even permanent blindness if not addressed. Regular eye care helps detect and prevent conditions like myopia, cataracts, or glaucoma early, ensuring long-term quality of life and independence."
+                                android:textSize="15sp" />
 
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
-                    <TextView
-                        android:id="@+id/textView6"
-                        android:layout_marginTop="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
 
 
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_marginTop="20dp"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
+                        android:layout_marginTop="15dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="News"
+                            android:textStyle="bold"
+                            android:textSize="20sp"/>
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
-                       <ImageView
-                           android:layout_width="match_parent"
-                           android:layout_height="105dp">
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerViewNews"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp" />
+                    </LinearLayout>
 
-                       </ImageView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="105dp">
+
+                        </ImageView>
 
                     </LinearLayout>
 
